WaSabi/src/grammar/GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.4
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, WS=2, OPENBRACKET=3, CLOSEBRACKET=4, SEPARATOR=5, CIRCUIT=6, 
		LIBRARY=7, CONST=8, COMPONENT=9, SIMULATE=10, AT=11, MODEL=12, GND=13, 
		DC=14, AC=15, PI=16, EQUAL=17, RES=18, CAP=19, IND=20, VOL=21, CUR=22, 
		DIO=23, BJT=24, MOS=25, JFET=26, UNIT=27, PATH=28, VALUE=29, MODTYPE=30, 
		ID=31, DIRECTIVE=32;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT", "WS", "OPENBRACKET", "CLOSEBRACKET", "SEPARATOR", 
		"CIRCUIT", "LIBRARY", "CONST", "COMPONENT", "SIMULATE", "AT", "MODEL", 
		"GND", "DC", "AC", "PI", "'='", "RES", "CAP", "IND", "VOL", "CUR", "DIO", 
		"BJT", "MOS", "JFET", "UNIT", "PATH", "VALUE", "MODTYPE", "ID", "DIRECTIVE"
	};
	public static final int
		RULE_axiom = 0, RULE_pr = 1, RULE_title = 2, RULE_library = 3, RULE_listlib = 4, 
		RULE_newlib = 5, RULE_constants = 6, RULE_listconst = 7, RULE_newconst = 8, 
		RULE_newconst2 = 9, RULE_newvalue = 10, RULE_newwave = 11, RULE_newwaveDC = 12, 
		RULE_newwaveAC = 13, RULE_newmod = 14, RULE_components = 15, RULE_listcomp = 16, 
		RULE_newcomp = 17, RULE_resistance = 18, RULE_capaticance = 19, RULE_inductance = 20, 
		RULE_voltage = 21, RULE_current = 22, RULE_diode = 23, RULE_bjt = 24, 
		RULE_mosfet = 25, RULE_jfet = 26, RULE_model = 27, RULE_node = 28, RULE_valueID = 29, 
		RULE_waveID = 30, RULE_modtypeID = 31, RULE_listnodes = 32, RULE_listnodes2 = 33, 
		RULE_sim = 34, RULE_dirsim = 35, RULE_newdir = 36;
	public static final String[] ruleNames = {
		"axiom", "pr", "title", "library", "listlib", "newlib", "constants", "listconst", 
		"newconst", "newconst2", "newvalue", "newwave", "newwaveDC", "newwaveAC", 
		"newmod", "components", "listcomp", "newcomp", "resistance", "capaticance", 
		"inductance", "voltage", "current", "diode", "bjt", "mosfet", "jfet", 
		"model", "node", "valueID", "waveID", "modtypeID", "listnodes", "listnodes2", 
		"sim", "dirsim", "newdir"
	};

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AxiomContext extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public PrContext pr() {
			return getRuleContext(PrContext.class,0);
		}
		public AxiomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axiom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterAxiom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitAxiom(this);
		}
	}

	public final AxiomContext axiom() throws RecognitionException {
		AxiomContext _localctx = new AxiomContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_axiom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if (_la==CIRCUIT) {
				{
				setState(74); title();
				}
			}

			setState(77); pr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrContext extends ParserRuleContext {
		public ComponentsContext components() {
			return getRuleContext(ComponentsContext.class,0);
		}
		public SimContext sim() {
			return getRuleContext(SimContext.class,0);
		}
		public PrContext pr() {
			return getRuleContext(PrContext.class,0);
		}
		public ConstantsContext constants() {
			return getRuleContext(ConstantsContext.class,0);
		}
		public LibraryContext library() {
			return getRuleContext(LibraryContext.class,0);
		}
		public PrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterPr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitPr(this);
		}
	}

	public final PrContext pr() throws RecognitionException {
		PrContext _localctx = new PrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LIBRARY) | (1L << CONST) | (1L << COMPONENT) | (1L << SIMULATE))) != 0)) {
				{
				setState(83);
				switch (_input.LA(1)) {
				case LIBRARY:
					{
					setState(79); library();
					}
					break;
				case CONST:
					{
					setState(80); constants();
					}
					break;
				case COMPONENT:
					{
					setState(81); components();
					}
					break;
				case SIMULATE:
					{
					setState(82); sim();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(85); pr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode CIRCUIT() { return getToken(GrammarParser.CIRCUIT, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTitle(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); match(CIRCUIT);
			setState(90); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LibraryContext extends ParserRuleContext {
		public TerminalNode LIBRARY() { return getToken(GrammarParser.LIBRARY, 0); }
		public ListlibContext listlib() {
			return getRuleContext(ListlibContext.class,0);
		}
		public LibraryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_library; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterLibrary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitLibrary(this);
		}
	}

	public final LibraryContext library() throws RecognitionException {
		LibraryContext _localctx = new LibraryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_library);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(LIBRARY);
			setState(93); listlib();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListlibContext extends ParserRuleContext {
		public NewlibContext newlib() {
			return getRuleContext(NewlibContext.class,0);
		}
		public ListlibContext listlib() {
			return getRuleContext(ListlibContext.class,0);
		}
		public ListlibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listlib; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterListlib(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitListlib(this);
		}
	}

	public final ListlibContext listlib() throws RecognitionException {
		ListlibContext _localctx = new ListlibContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listlib);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if (_la==PATH) {
				{
				setState(95); newlib();
				setState(96); listlib();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewlibContext extends ParserRuleContext {
		public TerminalNode PATH() { return getToken(GrammarParser.PATH, 0); }
		public NewlibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newlib; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNewlib(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNewlib(this);
		}
	}

	public final NewlibContext newlib() throws RecognitionException {
		NewlibContext _localctx = new NewlibContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_newlib);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100); match(PATH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantsContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(GrammarParser.CONST, 0); }
		public ListconstContext listconst() {
			return getRuleContext(ListconstContext.class,0);
		}
		public ConstantsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constants; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterConstants(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitConstants(this);
		}
	}

	public final ConstantsContext constants() throws RecognitionException {
		ConstantsContext _localctx = new ConstantsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constants);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(CONST);
			setState(103); listconst();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListconstContext extends ParserRuleContext {
		public NewconstContext newconst() {
			return getRuleContext(NewconstContext.class,0);
		}
		public ListconstContext listconst() {
			return getRuleContext(ListconstContext.class,0);
		}
		public ListconstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listconst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterListconst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitListconst(this);
		}
	}

	public final ListconstContext listconst() throws RecognitionException {
		ListconstContext _localctx = new ListconstContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listconst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(105); newconst();
				setState(106); listconst();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewconstContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(GrammarParser.EQUAL, 0); }
		public Newconst2Context newconst2() {
			return getRuleContext(Newconst2Context.class,0);
		}
		public NewconstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newconst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNewconst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNewconst(this);
		}
	}

	public final NewconstContext newconst() throws RecognitionException {
		NewconstContext _localctx = new NewconstContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_newconst);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(ID);
			setState(111); match(EQUAL);
			setState(112); newconst2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Newconst2Context extends ParserRuleContext {
		public NewvalueContext newvalue() {
			return getRuleContext(NewvalueContext.class,0);
		}
		public NewwaveContext newwave() {
			return getRuleContext(NewwaveContext.class,0);
		}
		public NewmodContext newmod() {
			return getRuleContext(NewmodContext.class,0);
		}
		public Newconst2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newconst2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNewconst2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNewconst2(this);
		}
	}

	public final Newconst2Context newconst2() throws RecognitionException {
		Newconst2Context _localctx = new Newconst2Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_newconst2);
		try {
			setState(117);
			switch (_input.LA(1)) {
			case PI:
			case VALUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(114); newvalue();
				}
				break;
			case DC:
			case AC:
				enterOuterAlt(_localctx, 2);
				{
				setState(115); newwave();
				}
				break;
			case MODTYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(116); newmod();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewvalueContext extends ParserRuleContext {
		public TerminalNode PI() { return getToken(GrammarParser.PI, 0); }
		public TerminalNode VALUE() { return getToken(GrammarParser.VALUE, 0); }
		public TerminalNode UNIT() { return getToken(GrammarParser.UNIT, 0); }
		public NewvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNewvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNewvalue(this);
		}
	}

	public final NewvalueContext newvalue() throws RecognitionException {
		NewvalueContext _localctx = new NewvalueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_newvalue);
		int _la;
		try {
			setState(124);
			switch (_input.LA(1)) {
			case VALUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(119); match(VALUE);
				setState(121);
				_la = _input.LA(1);
				if (_la==UNIT) {
					{
					setState(120); match(UNIT);
					}
				}

				}
				break;
			case PI:
				enterOuterAlt(_localctx, 2);
				{
				setState(123); match(PI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewwaveContext extends ParserRuleContext {
		public NewwaveDCContext newwaveDC() {
			return getRuleContext(NewwaveDCContext.class,0);
		}
		public NewwaveACContext newwaveAC() {
			return getRuleContext(NewwaveACContext.class,0);
		}
		public NewwaveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newwave; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNewwave(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNewwave(this);
		}
	}

	public final NewwaveContext newwave() throws RecognitionException {
		NewwaveContext _localctx = new NewwaveContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_newwave);
		try {
			setState(128);
			switch (_input.LA(1)) {
			case DC:
				enterOuterAlt(_localctx, 1);
				{
				setState(126); newwaveDC();
				}
				break;
			case AC:
				enterOuterAlt(_localctx, 2);
				{
				setState(127); newwaveAC();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewwaveDCContext extends ParserRuleContext {
		public ValueIDContext valueID() {
			return getRuleContext(ValueIDContext.class,0);
		}
		public TerminalNode OPENBRACKET() { return getToken(GrammarParser.OPENBRACKET, 0); }
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarParser.CLOSEBRACKET, 0); }
		public TerminalNode DC() { return getToken(GrammarParser.DC, 0); }
		public NewwaveDCContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newwaveDC; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNewwaveDC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNewwaveDC(this);
		}
	}

	public final NewwaveDCContext newwaveDC() throws RecognitionException {
		NewwaveDCContext _localctx = new NewwaveDCContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_newwaveDC);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); match(DC);
			setState(131); match(OPENBRACKET);
			setState(132); valueID();
			setState(133); match(CLOSEBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewwaveACContext extends ParserRuleContext {
		public List<ValueIDContext> valueID() {
			return getRuleContexts(ValueIDContext.class);
		}
		public TerminalNode OPENBRACKET() { return getToken(GrammarParser.OPENBRACKET, 0); }
		public TerminalNode SEPARATOR() { return getToken(GrammarParser.SEPARATOR, 0); }
		public TerminalNode AC() { return getToken(GrammarParser.AC, 0); }
		public ValueIDContext valueID(int i) {
			return getRuleContext(ValueIDContext.class,i);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarParser.CLOSEBRACKET, 0); }
		public NewwaveACContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newwaveAC; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNewwaveAC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNewwaveAC(this);
		}
	}

	public final NewwaveACContext newwaveAC() throws RecognitionException {
		NewwaveACContext _localctx = new NewwaveACContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_newwaveAC);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(AC);
			setState(136); match(OPENBRACKET);
			setState(137); valueID();
			setState(138); match(SEPARATOR);
			setState(139); valueID();
			setState(140); match(CLOSEBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewmodContext extends ParserRuleContext {
		public TerminalNode MODTYPE() { return getToken(GrammarParser.MODTYPE, 0); }
		public NewmodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newmod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterNewmod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitNewmod(this);
		}
	}

	public final NewmodContext newmod() throws RecognitionException {
		NewmodContext _localctx = new NewmodContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_newmod);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(MODTYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentsContext extends ParserRuleContext {
		public ListcompContext listcomp() {
			return getRuleContext(ListcompContext.class,0);
		}
		public TerminalNode COMPONENT() { return getToken(GrammarParser.COMPONENT, 0); }
		public ComponentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_components; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterComponents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitComponents(this);
		}
	}

	public final ComponentsContext components() throws RecognitionException {
		ComponentsContext _localctx = new ComponentsContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_components);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(COMPONENT);
			setState(145); listcomp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListcompContext extends ParserRuleContext {
		public ListcompContext listcomp() {
			return getRuleContext(ListcompContext.class,0);
		}
		public NewcompContext newcomp() {
			return getRuleContext(NewcompContext.class,0);
		}
		public ListcompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listcomp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterListcomp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitListcomp(this);
		}
	}

	public final ListcompContext listcomp() throws RecognitionException {
		ListcompContext _localctx = new ListcompContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_listcomp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MODEL) | (1L << RES) | (1L << CAP) | (1L << IND) | (1L << VOL) | (1L << CUR) | (1L << DIO) | (1L << BJT) | (1L << MOS) | (1L << JFET))) != 0)) {
				{
				setState(147); newcomp();
				setState(148); listcomp();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewcompContext extends ParserRuleContext {
		public InductanceContext inductance() {
			return getRuleContext(InductanceContext.class,0);
		}
		public ResistanceContext resistance() {
			return getRuleContext(ResistanceContext.class,0);
		}
		public VoltageContext voltage() {
